Fixing trigger container z-index in mobile

--- a/src/stylesheets/styles.styl
+++ b/src/stylesheets/styles.styl
@@ -243,6 +243,7 @@ rotationAnimation()
     //width var(--sound-trigger-default-size)
     height unset
     pointer-events auto
+    z-index 10
 
 .soundTrigger
     background transparent
